--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/core": "^10.0.0",
     "@emotion/styled": "^10.0.0",
     "emotion-theming": "^10.0.0",
+    "lodash": "^4.17.11",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-select": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
